<resources>
    <string name="app_name">FaceRegister</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_ID">学号格式不正确</string>
    <string name="error_invalid_email">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="not_same_password">两次密码输入不一致</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">"New User?"</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_ID">学号</string>
    <string name="prompt_Name">真实姓名</string>
    <string name="action_next_step">下一步</string>
    <string name="prompt_Username">用户名(登录用)</string>
    <string name="prompt_passwordagain">再次输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
